--- a/style.css
+++ b/style.css
@@ -2,10 +2,15 @@
     color:black;
     margin-top: 3vh;
     font-family: sans-serif;
+    font-size: 3.5vh;
+    font-weight: bolder;
+    margin-bottom: 2vh;
 }
+
 img{
-    margin-top: 2vh;
+    margin-top: 2.5vh;
 }
+
 .username{
   height: 7.5vh;
   width:70vh;
@@ -18,6 +23,7 @@ img{
 }
 
 #phone::placeholder {color: #8ED0F9;
+    font-size: 2.3vh;
    }
 
 .password{
@@ -28,7 +34,12 @@ img{
    border-top: 0 white;
    border-left:0 white;
    border-right:0 white;
+   border-bottom: 0.6vh solid rgb(70, 58, 58);
    }
+
+ #pass::placeholder {
+     font-size: 2.3vh;
+ }  
 
 .login{
     height: 7.5vh;
@@ -39,7 +50,7 @@ img{
     border-radius: 25px;
     color: #fff;
     font-weight: bold;
-    font-size: 15px;
+    font-size: 3vh;
     }
 
 .forgot {
